--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -81,7 +81,7 @@ h1,h2{color: #fff;}
 <div class="contenedor-banner">
     <img src="https://ox.pe/wp-content/uploads/2020/10/Banner-Poleras-Inicio.jpg" alt="" class="banner">
     <div class="contenido-banner">
-        <h1 class="title-contenido">POLERAS PERSONALIZADAS</h1>
+        <h1 class="title-contenido">DISEÑOS PERSONALIZADAS</h1>
         <h2 class="subtitle-contenido desktop">SERIGRAFIA DIGITAL</h2>
         <span class="desktop" >Pide tu polera hoy</span>
         <div class="contenedor-btn-banner desktop">
@@ -101,7 +101,7 @@ h1,h2{color: #fff;}
             <div class="contenedor-image-producto cinp1">
                 <img class="image-nuestro-producto" src="https://ox.pe/wp-content/uploads/2018/11/Polo-personalizado-Negro-600x600.jpg" alt="">
                 <div class="descripcion-img-nuestro-producto dinp1">
-                    <div class="titulo-im-nuestro-producto">POLOS PERSONALIZADOS</div>
+                    <div class="titulo-im-nuestro-producto">DISEÑOS PERSONALIZADOS</div>
                     <div class="subtitulo-im-nuestro-producto">8 PRODUCTOS</div>
                 </div>
             </div>
