--- a/templates/producto/historial_pagos.html
+++ b/templates/producto/historial_pagos.html
@@ -75,7 +75,7 @@ th{background-color: #a139b0;color: #fff;}
     <tr style="border: none;">
       <td style="border: none;"></td>
       <td style="border: none;"></td>
-      <td class="realizar-pago"><a href="" style="color: #fff;">Realizar el pago <i class="fa fa-cart-arrow-down" aria-hidden="true"></i> </a></td>
+      <td class="realizar-pago"><a href="{% url 'payment_page' %}" style="color: #fff;">Realizar el pago <i class="fa fa-cart-arrow-down" aria-hidden="true"></i> </a></td>
     </tr>
   </table>
 
